# arag-experiments

./: .env.example  .gitignore  CLAUDE.md  README.md  projectplan.md  pyproject.toml  summarization_plan.md
app/: streamlit_app.py
baselines/: __init__.py  long_context_summary.py  naive_rag.py  naive_rag_summary.py
configs/: docfinqa.yaml  ectsum.yaml  ectsum_naive.yaml  ectsum_stuffing.yaml  financebench.yaml  financebench_sum.yaml  finder.yaml  finqa.yaml  multihiertt.yaml
data/ectsum/: gold_chunk_map.json
results/: arag_evaluation_report.html  financebench_report.md  summarization_report.md
results/ectsum/: .geval_criteria_cache.json  predictions.eval.jsonl  predictions.jsonl
results/ectsum_naive/: .geval_criteria_cache.json  predictions.eval.jsonl  predictions.jsonl
results/ectsum_stuffing/: .geval_criteria_cache.json  predictions.eval.jsonl  predictions.jsonl
results/financebench/: predictions.eval.jsonl
results/financebench_naive/: predictions.eval.jsonl  predictions.jsonl
results/financebench_sum/: .geval_criteria_cache.json  predictions.eval.jsonl  predictions.jsonl
results/financebench_sum_naive/: .geval_criteria_cache.json  predictions.eval.jsonl  predictions.jsonl
results/finder/: predictions.eval.jsonl
scripts/: batch_runner.py  build_report.py  derive_financebench_sum.py  eval.py  generate_summarization_report.py  prepare_docfinqa.py  prepare_ectsum.py  prepare_financebench.py  prepare_finder.py  prepare_finqa.py  run_phase6.sh
tests/: test_chunker.py  test_config.py  test_prompts.py  test_summarization_eval.py  test_tools.py
(+22 files in other folders)
